# 542-LegalContract-AI

./: .gitignore  340Project.pptx  README.md  clause_condenser.ipynb  proj_prop.tex  pyproject.toml  segmentation.ipynb
Clause Segmentation/: clause_condenser.ipynb  segmentation.ipynb  segmentation_fixed.ipynb
Final Report/: project_report.tex  unsup-writeup.md
Final Report/Part1/: part1.tex
LLM_tagging/: CUAD_sampler.py  LLM_tagging.ipynb  Predictive_Model.ipynb  full_labels.csv  readme.md
Old Notebooks/: Updated FINAL Compensation and Financials.ipynb  Updated FINAL Confidentiality and Non-Disclosure.ipynb  Updated FINAL Termination and Renewal.ipynb  Updated FINAL_terms_and_conditions.ipynb  blind_testing.ipynb
Project Proposal/: LICENSE  proj_prop.tex  proj_prop_edit1.aux  proj_prop_edit1.fdb_latexmk  proj_prop_edit1.fls  proj_prop_edit1.tex
code/: dataset_processing.ipynb  document_clustering.ipynb  find_dataset.py
