[project]
name = "legalcontract-ai"
version = "0.1.0"
description = "An automated legal document clause classifier, summarizer, and evaluator."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "matplotlib>=3.10.1",
    "openai>=1.76.2",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "wandb>=0.19.10",
]

[tool.ruff]
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".ruff_cache",
    ".venv",
    "__init__.py",
    "Old Notebooks",
]
line-length = 255

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle (error)
    "F", # pyflakes
    "B", # bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "I", # isort
    "UP", # pyupgrade
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific
]
ignore = [
    "RUF010", # Explicit conversion flag
    "D203", # 1 blank line required before class docstring
    "D204", # 1 blank line required after function docstring
    "D205", # 1 blank line required after class docstring
    "D211", # No blank line before section
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D401", # First line should be in imperative mood
    "D413", # Missing newline after last section
]

[tool.ruff.format]
quote-style = "double"
